--- a/css/estilos.css
+++ b/css/estilos.css
@@ -86,8 +86,28 @@ img{
 }
 
 .c2 img {
-	width:100%;
+	width:90%;
+	margin-top:10%;
 }
+
+.c2 img:hover {
+	animation: rotar 1.5s;
+	
+}
+
+@-webkit-keyframes rotar {
+	transform: rotateZ(10deg);
+	0%{
+		transform: rotateZ(0deg);
+	}
+	50%{
+		transform: rotateZ(10deg);
+	}
+	100%{
+		transform: rotateZ(0deg);
+	}
+}
+	
 
 .c3 {
 	background-color: #d5c75f;
@@ -97,6 +117,23 @@ img{
 
 .c3 img {
 	width:100%;
+}
+
+.c3 img:hover {
+	animation: transladar 1.5s;
+}
+
+@-webkit-keyframes transladar {
+	transform: rotateZ(10deg);
+	0%{
+		transform: translate(0px, 0px);
+	}
+	50%{
+		transform: translate(20px, -5px);
+	}
+	100%{
+		transform: translate(0px, 0px);
+	}
 }
 
 @media (max-width: 899px) {
