--- a/css/estilos-paisajes.css
+++ b/css/estilos-paisajes.css
@@ -49,80 +49,31 @@ body{
 	padding-right:10px;
 }
 
-#inicio {
+#paisaje {
 	text-decoration: none;
+}
+
+.imagenes {
+	background-color: #82c3a6;
 }
 
 img{
 	box-shadow:2px 2px #02010a;
 }
 
-.c1 {
-	background-color: #82c3a6;
-	width: 90%;
-	padding:5%;
+#c1	{
+	-webkit-filter:blur(10px);
+	filter:blur(10px);
 }
 
-.c1 img {
-	width:100%;
-
+#c3 {
+	-webkit-filter:sepia(90%);
+	filter:sepia(90%);
 }
 
-.c2 {
-	background-color: #d5c75f;
-	width: 40%;
-	padding:5%;
-}
-
-.c2 img {
-	width:90%;
-	margin-top:10%;
-}
-
-.c2 img:hover {
-	animation: rotar 1.5s;
-	
-}
-
-@-webkit-keyframes rotar {
-	transform: rotateZ(10deg);
-	0%{
-		transform: rotateZ(0deg);
-	}
-	50%{
-		transform: rotateZ(10deg);
-	}
-	100%{
-		transform: rotateZ(0deg);
-	}
-}
-	
-
-.c3 {
-	background-color: #d5c75f;
-	width: 40%;
-	padding:5%;
-}
-
-.c3 img {
-	width:100%;
-}
-
-.c3 img:hover {
-	animation: transladar 1.5s;
-}
-
-@-webkit-keyframes transladar {
-	transform: rotateZ(10deg);
-	0%{
-		transform: translate(0px, 0px);
-	}
-	50%{
-		transform: translate(20px, -5px);
-	}
-	100%{
-		transform: translate(0px, 0px);
-	}
+#c2, #c4, #c6 {
+	-webkit-filter:grayscale(100%);
+	filter:grayscale(100%);
 }
 
 footer{
@@ -144,13 +95,12 @@ footer div{
 		width: 100%;
 		text-align:center;
 	}
-	.c2 {
+	.foto {
 		width: 90%;
-		padding:5%;	
+		padding:5%
 	}
-	.c3 {
-		width: 90%;
-		padding:5%;	
+	.foto img {
+		width:100%;
 	}
 	footer div{
 		text-align:left;
@@ -174,6 +124,13 @@ footer div{
 	.imagenes{
 		display: flex;
 		flex-flow: row wrap;
+	}
+	.foto {
+		width: 29%;
+		padding:2%
+	}
+	.foto img {
+		width:100%;
 	}
 	footer{
 		display: flex;
